Update image logo source

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
 
     <header>
-        <h2><img src="./imágenes/Pastelería Interestelar.JPG" alt="Pastelería Interestelar" height="180"></h2>
+        <h2><img src="https://raw.githubusercontent.com/FelipeCamarena/FrontEnd-Mission_Pasteleria.github.io/main/im%C3%A1genes/Pasteler%C3%ADa%20Interestelar.JPG" alt="Pastelería Interestelar" height="180"></h2>
     </header>
 
     <section>
