change pasteleria interestelar.html to index.html

--- a/Inventario.html
+++ b/Inventario.html
@@ -99,7 +99,7 @@
 
     <section>
         <nav><ul>
-            <li><a href="./Pastelería Interestelar.html">Inicio</a></li>
+            <li><a href="./index.html">Inicio</a></li>
             <li><a href="./Pedido.html">Pedido</a></li>
             <li><a href="./Inventario.html">Inventario</a></li>  
         </ul>     
